--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+.Full-width {
+  width: 100%;
+}
+
 .App-header {
   background-color: #222;
   padding: 20px;
@@ -14,4 +18,8 @@
 
 .App-intro {
   font-size: large;
+}
+
+.grey {
+  color: #cccccc;
 }
